fix button color rendering on mobile

--- a/stylesheets/base/splash.scss
+++ b/stylesheets/base/splash.scss
@@ -65,6 +65,7 @@
   box-shadow: 0px 9px 32px 0px rgba(0, 0, 0, 0.26);
   margin-top: 25px;
   border-radius: 5px;
+  background-color: white;
 
   &:hover {
     color: #d6619c;
